[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/SweetSquish4.gd" type="Script" id=1]
[ext_resource path="res://assets/art/phone.png" type="Texture" id=2]
[ext_resource path="res://scripts/square1.gd" type="Script" id=3]
[ext_resource path="res://assets/art/border.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="StreamTexture" id=11]
flags = 4
load_path = "res://.import/border.png-264d4a92a994072aad8f763cd6a974c3.stex"

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="StreamTexture" id=13]
flags = 4
load_path = "res://.import/border.png-264d4a92a994072aad8f763cd6a974c3.stex"

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 52.286, 51.7646 )

[sub_resource type="StreamTexture" id=15]
flags = 4
load_path = "res://.import/border.png-264d4a92a994072aad8f763cd6a974c3.stex"

[node name="SweetSquish" type="Node2D"]
script = ExtResource( 1 )

[node name="phone" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="squares" type="Node2D" parent="."]

[node name="row1" type="Node2D" parent="squares"]

[node name="square1" type="Area2D" parent="squares/row1"]
position = Vector2( 330, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row1/square1"]
shape = SubResource( 1 )

[node name="border" type="Sprite" parent="squares/row1/square1"]
visible = false
texture = ExtResource( 4 )

[node name="square2" type="Area2D" parent="squares/row1"]
position = Vector2( 445, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row1/square2"]
shape = SubResource( 2 )

[node name="border" type="Sprite" parent="squares/row1/square2"]
visible = false
texture = ExtResource( 4 )

[node name="square3" type="Area2D" parent="squares/row1"]
position = Vector2( 560, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row1/square3"]
shape = SubResource( 3 )

[node name="border" type="Sprite" parent="squares/row1/square3"]
visible = false
texture = ExtResource( 4 )

[node name="square4" type="Area2D" parent="squares/row1"]
position = Vector2( 675, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row1/square4"]
shape = SubResource( 10 )

[node name="border" type="Sprite" parent="squares/row1/square4"]
visible = false
texture = SubResource( 11 )

[node name="row2" type="Node2D" parent="squares"]
position = Vector2( 0, 200 )

[node name="square1" type="Area2D" parent="squares/row2"]
position = Vector2( 330, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row2/square1"]
shape = SubResource( 4 )

[node name="border" type="Sprite" parent="squares/row2/square1"]
visible = false
texture = ExtResource( 4 )

[node name="square2" type="Area2D" parent="squares/row2"]
position = Vector2( 445, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row2/square2"]
shape = SubResource( 5 )

[node name="border" type="Sprite" parent="squares/row2/square2"]
visible = false
texture = ExtResource( 4 )

[node name="square3" type="Area2D" parent="squares/row2"]
position = Vector2( 560, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row2/square3"]
shape = SubResource( 6 )

[node name="border" type="Sprite" parent="squares/row2/square3"]
visible = false
texture = ExtResource( 4 )

[node name="square4" type="Area2D" parent="squares/row2"]
position = Vector2( 675, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row2/square4"]
shape = SubResource( 12 )

[node name="border" type="Sprite" parent="squares/row2/square4"]
visible = false
texture = SubResource( 13 )

[node name="row3" type="Node2D" parent="squares"]
position = Vector2( 0, 400 )

[node name="square1" type="Area2D" parent="squares/row3"]
position = Vector2( 330, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row3/square1"]
shape = SubResource( 7 )

[node name="border" type="Sprite" parent="squares/row3/square1"]
visible = false
texture = ExtResource( 4 )

[node name="square2" type="Area2D" parent="squares/row3"]
position = Vector2( 445, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row3/square2"]
shape = SubResource( 8 )

[node name="border" type="Sprite" parent="squares/row3/square2"]
visible = false
texture = ExtResource( 4 )

[node name="square3" type="Area2D" parent="squares/row3"]
position = Vector2( 560, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row3/square3"]
shape = SubResource( 9 )

[node name="border" type="Sprite" parent="squares/row3/square3"]
visible = false
texture = ExtResource( 4 )

[node name="square4" type="Area2D" parent="squares/row3"]
position = Vector2( 675, 80 )
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="squares/row3/square4"]
shape = SubResource( 14 )

[node name="border" type="Sprite" parent="squares/row3/square4"]
visible = false
texture = SubResource( 15 )

